# settings

./: Cargo.toml  README.md  create-project.py  default.nix  flake.nix  meson.build  result  shell.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 2hl8xly1ai6ga0hwigc8lp9d3s0xn8a8-source  h2bn031b0fj0ymv9v7bv5rcdjx58y2l9-source
.github/workflows/: test.yml
build-aux/: net.bleur.GtkRustTemplate.Devel.json
data/: net.bleur.GtkRustTemplate.gschema.xml.in
data/resources/: resources.gresource.xml
po/: POTFILES.in
src/: app.rs  main.rs
src/modals/: about.rs  bluetooth.rs  counter.rs  mod.rs  network.rs  toggler.rs  wifi.rs
