[package]
name = "gtk-rust-template"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "#description#"
homepage = "#website#"
repository = "#repository#"
authors = ["#author#"]
publish = false

[profile.release]
lto = true

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
relm4 = { version = "0.9.1", features = ["libadwaita", "gnome_47"] }
tracing = "0.1.41"
tracing-subscriber = "0.3"
